2005-03-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_base.h (lt_dlerror): Needed to provide a mapping to
	NTdlerror().
	* coders/tiff.c (TIFFErrors): Update to make thread safe via
	thread specific data.
	(TIFFWarnings): Update to make thread safe via thread specific
	data.
	* magick/tsd.c (MagickTsdKeyCreate): New function to support
	thread specific data.
	(MagickTsdKeyDelete): ditto
	(MagickTsdSetSpecific): ditto
	(MagickTsdGetSpecific): ditto.

2005-03-17  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (ReplaceImageColormap): New function to replace
	the image colormap with a user-provided one. Colormap indexes are
	adjusted to point to identical colors in the new colormap.
	* magick/nt_base.h: Reorganized a bit to cluster code supporting
	similar features in the same area of the header.
	* magick/nt_base.c: Renamed wrappers for standard functions so
	that they have the prefix 'NT'. Macros are used to apply the new
	names. This assures that there will not be conflicts if the library
	is linked with a different package's wrapper functions.

2005-03-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/quantize.c (GrayscalePseudoClassImage): Moved to here
	from image.c.  Added support for is_monochrome.

2005-03-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* jp2: Updated Jasper library to version 1.701.0.
	* magick/nt_base.c (NTGhostscriptFonts): Fixed a coding error
	which was added when strcpy/strcat code was replaced with
	strlcpy/strlcat.  Ghostscript fonts were not being found.
	* magick/constitute.c (ReadImage): Don't attempt to access image
	members if image pointer is null.  Oops!

2005-03-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (SetImageType): Bilevel image is not required to
	be PseudoClass type.
	* coders/mpc.c (WriteMPCImage): Persist is_monochrome and
	is_grayscale flags.
	(ReadMPCImage): Restore is_monochrome and is_grayscale flags.