@@ -24,5 +24,5 @@ require 't/subroutines.pl';
 
 chdir 't/cgm' || die 'Cd failed';
 
-testReadCompare('CGM:input.cgm', '../reference/cgm/read.miff', q//, 0.0, 0.0);
+testReadCompare('CGM:input.cgm', '../reference/cgm/read.miff', q//, 0.0002, 0.15);
 
