@@ -21,6 +21,14 @@
 </tr>
 </table>
 <p>
+2005-03-19  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/pdf.c (WritePDFImage): Eliminate cause of annoying
+        warning when PDFs are read by Ghostscript 8.5.
+
+</UL>
+<p>
 2005-03-18  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
